# jean-memory

./: .deployment-trigger  .gitignore  ARCHITECTURE_UPDATE.md  AUTHENTICATION_ARCHITECTURE_ANALYSIS.md  AUTHENTICATION_HANDOFF.md  CHAOS_TESTING_ROUND_2_FINDINGS.md  CHATGPT_SSE_STATUS.md  CLAUDE_CODE_STATUS_REPORT.md  CLAUDE_CONNECTION_STEPS.md  CLAUDE_OAUTH_FINAL_STATUS.md  CLAUDE_OAUTH_SUMMARY.md  CLAUDE_WEB_OAUTH_SETUP.md  COMPANY_DEV_REPORT.md  COMPREHENSIVE_API_TESTING_PLAN.md  COMPREHENSIVE_JEAN_MEMORY_ANALYSIS.md  COMPREHENSIVE_SDK_STATUS_REPORT.md  COMPREHENSIVE_SDK_VALIDATION_v1.2.5.md  COPY_BUTTON_DEBUGGING.md  COPY_BUTTON_ISSUE_REPORT.md  CRITICAL_TESTING_GAPS_DEVELOPER_HANDOFF.md  DATA_PLANE_LAYER_JIRA_TASK.md  DATA_PLANE_LAYER_V1_IMPLEMENTATION.md  DEBUG_OAUTH_FLOW.md  DEVELOPER_EXPERIENCE_PLAN.md  DEVELOPER_GUIDE_SPEED_MODES.md  DEVELOPER_TESTING_GUIDE.md  DEV_OAUTH_QUICK_SETUP.md  DEV_SECURITY_UPDATE.md  DOCUMENTATION_COMPREHENSIVE_GUIDE.md  DOCUMENTATION_FIXES_NEEDED.md  DOCUMENTATION_SUMMARY.md  DOC_REVIEW_README.md  EFFICIENT_DEVELOPMENT_PROTOCOL_REPORT.md  ENDPOINT_ROUTING_UPDATE_SUMMARY.md  EPISODE_CREATION_SUCCESS.md  EVALUATION_FRAMEWORK_DOCUMENTATION.md  EVALUATION_FRAMEWORK_IMPLEMENTATION_PLAN.md  EVALUATION_INFRASTRUCTURE_COMPLETE.md  EVALUATION_SUBTASKS_4-7_FRDS.md  FINAL_DEPLOYMENT_SUMMARY.md  (+271 more)
.claude/: settings.local.json
chaos-testing/: backend-hammer-v2.py  chaos-orchestrator.sh  memory-cross-validation.py  node-stress-test.js  optimized-sdk-stress-test.py  round-2-ultimate-chaos.py
cloudflare/: README.md  package-lock.json  package.json  test-deployment.sh  test-worker.js  tsconfig.json  wrangler.toml
core_docs/: FINAL_COMPREHENSIVE_VALIDATION_REPORT.md  JEAN_MEMORY_BIBLE.md  JEAN_MEMORY_SDK_COMPLETE_OVERVIEW.md  NEW_AUTH.md  SDK_COMPREHENSIVE_OVERVIEW.md
docs/: AI_QUICK_DEPLOY_FEATURE.md  ASYNC_AI_REASONING_ANALYSIS.md  CLAUDE_CONNECTION_CLEAN_UI.md  CLAUDE_CONNECTION_DIALOG_COPY.md  CLAUDE_OAUTH_MINIMAL.md  CLAUDE_WEB_CONNECTION_UI.md  COMPLETE_OAUTH_FLOW.md  CONTEXT_ENGINEERING_OPTIMIZATION_ANALYSIS.md  ENVIRONMENT_SETUP.md  INFRASTRUCTURE_CONSTRAINTS.md  JEAN_MEMORY_BIBLE.md  JEAN_MEMORY_CONTEXT_ENGINEERING_ALGORITHM.md  JWT_DEEP_DIVE.md  MANUAL_SETUP_REPLACEMENT.md  MINIMAL_CHANGE_OPTIMIZATION_IMPLEMENTATION.md  OAUTH_ARCHITECTURE_CLARIFICATION.md  OAUTH_BEFORE_AFTER.md  OAUTH_CLEAN_ARCHITECTURE.md  OAUTH_CLEAN_IMPLEMENTATION.md  OAUTH_DEV_DEPLOYMENT.md  PROJECT_STATUS_README.md  REPOSITORY_SETUP.md  SHORT_TERM_MEMORY_V2_CODEBASE_VALIDATION.md  SHORT_TERM_MEMORY_V2_CONSISTENCY_CHECK.md  SHORT_TERM_MEMORY_V2_CRITICAL_ANALYSIS.md  SHORT_TERM_MEMORY_V2_EDD.md  integrations.mdx  (+7 more)
docs-mintlify/: ai-copilot.mdx  architecture.mdx  authentication-guide.mdx  authentication.mdx  consolidated-api-docs.mdx  custom.css  development.mdx  five-line-magic.mdx  introduction.mdx  mint.json  oauth-troubleshooting.mdx  overview.mdx  quickstart.mdx  styles.css  tools.mdx  use-cases-guide.mdx  use-cases.mdx
(+679 files in other folders)
